fix invisible toggler in navbar

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -9,6 +9,12 @@ $primary: hsla(350, 100%, 25%, 1);
 $theme-colors: ("primary": $primary);
 $link-color: $primary;
 
+/* navbar */
+$navbar-dark-color: hsla(0, 0%, 100%, 0.7);
+$navbar-dark-toggler-border-color: hsla(0, 0%, 100%, 0.5);
+$navbar-dark-toggler-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-dark-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23");
+
+/* borders */
 $border-radius: 0.5rem;
 $border-radius-lg: 0.6rem;
 $border-radius-sm: 0.3rem;
